--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,10 @@
 debug/
 target/
 
+# Directories related to Nix
+data/
+.direnv/
+
 # Remove Cargo.lock from gitignore if creating an executable, leave it for libraries
 # More information here https://doc.rust-lang.org/cargo/guide/cargo-toml-vs-cargo-lock.html
 Cargo.lock
@@ -12,6 +16,7 @@ Cargo.lock
 
 # MSVC Windows builds of rustc generate these, which store debugging information
 *.pdb
+
 
 # RustRover
 #  JetBrains specific template is maintained in a separate JetBrains.gitignore that can
