--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,3 +6,5 @@ edition = "2021"
 [dependencies]
 actix-web = "4.0"
 tokio = { version = "1", features = ["full"] }
+askama = "0.12"
+actix-files = "0.6"
