added diesel and basic psql schema

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,11 @@ askama = "0.12"
 actix-files = "0.6"
 rand = "0.8"
 dotenv = "0.15"
+diesel = { version = "2.1.0", features = [
+  "postgres",
+  "r2d2",
+  "numeric",
+  "chrono",
+  "64-column-tables"
+] }
+diesel_json = "0.2.1"
