--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,3 +18,5 @@ diesel = { version = "2.1.0", features = [
   "64-column-tables"
 ] }
 diesel_json = "0.2.1"
+serde = { version = "1.0", features = ["derive"] }
+chrono = { version = "0.4.31", features = ["serde"] }
