--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,7 @@ Cargo.lock
 # MSVC Windows builds of rustc generate these, which store debugging information
 *.pdb
 
+*.env
 
 # RustRover
 #  JetBrains specific template is maintained in a separate JetBrains.gitignore that can
