--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,3 +25,4 @@ openidconnect = "2.3.0"
 reqwest = { version = "0.11", features = ["json"] }
 serde_json = "1.0"
 oauth2 = "4.0"
+uuid = { version = "1", features = ["v4"] }
